--- a/src/main/resources/templates/admin/categories/add.html
+++ b/src/main/resources/templates/admin/categories/add.html
@@ -1,5 +1,5 @@
 
-<form th:action="@{/admin/category/saveadd}" th:object="${category}" method="post">
+<form th:action="@{/admin/category/saveOfAdd}" th:object="${category}" method="post">
   <label for="categoryName">Name</label>
   <input type="text" th:field="*{categoryName}" id="categoryName" placeholder="Name">
   <span th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">Error message</span>
